# desi_retriever

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml
examples/: DailyNotebook.ipynb  Example.ipynb  ExampleBlanc.ipynb  ExampleDR1.ipynb  ExampleFuji.ipynb  ExampleIron.ipynb  ExampleJura.ipynb  ExampleLoa.ipynb  ExampleMatterhorn.ipynb  GaiaEverest.ipynb
py/desi_retriever/: __init__.py  plotter.py
py/desi_retriever/andes/: __init__.py  fetcher.py
py/desi_retriever/blanc/: fetcher.py
py/desi_retriever/daily/: fetcher.py
py/desi_retriever/denali/: fetcher.py
py/desi_retriever/dr1/: fetcher.py
py/desi_retriever/everest/: fetcher.py
py/desi_retriever/fuji/: fetcher.py
py/desi_retriever/iron/: fetcher.py
py/desi_retriever/jura/: fetcher.py
py/desi_retriever/loa/: __init__.py  fetcher.py
py/desi_retriever/matterhorn/: fetcher.py
py/desi_retriever/utils/: __init__.py  fetcher.py  gz.py
tests/: test_dr1.py  test_loa.py
